fix structure of landing page and changing color way, add logo and icon, styling section, add direction for contact on navbar and button

--- a/index.html
+++ b/index.html
@@ -8,42 +8,43 @@
   </head>
   <body>
     <header>
-      <nav class="navigation container">
+      <nav class="navigation">
         <a href="#" class="nav-logo">
-          <h2 class="logo-text">ini logo</h2>
+          <img src="PYN-HUB.svg" alt="PYN HUB Logo" class="logo-image">
         </a>
         <ul class="nav-menu">
           <li class="nav-item">
             <a href="#" class="nav-link">Home</a>
-        </li>
+          </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">CV</a>
-        </li>
+            <a href="CV.html" class="nav-link">CV</a>
+          </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Contact</a>
-        </li>
+            <a href="https://wa.me/081234567890" class="nav-link">Contact</a>
+          </li>
         </ul>
       </nav>
     </header>
 
     <main>
-      <section class="section-1 container">
-        <div class="info-detail">
-          <h4>Hi, I am</h4>
-          <h3 style="color: #fd6f00;">Alfa Edisound</h3>
-          <h1>Fullstack Developer</h1>
-          <p>
-            Fullstack Developer dengan pengalaman dalam membangun aplikasi web end-to-end
-            menggunakan React.js, Node.js, dan MongoDB. Terbiasa bekerja dalam tim Agile/Scrum
-            serta fokus pada clean code, keamanan, dan skalabilitas aplikasi.
-          </p>
-          <button class="btn-primary">Contact Me</button>
-        </div>
-        <div class="image">
-          <img
-            src="https://i.pinimg.com/736x/52/3b/ef/523bef1ca3b3d010d0984742a8a7e72b.jpg"
-            alt="foto_gw"
-          />
+      <section class="section-1">
+        <div class="container">
+          <div class="info-detail">
+            <h4>Ola, aku</h4>
+            <h3>Putu Yudi Nandanjaya</h3>
+            <h1>Fullstack Developer</h1>
+            <p>
+              Fullstack Developer dengan pengalaman dalam membangun aplikasi web end-to-end
+              menggunakan React.js, Node.js, dan MongoDB. Terbiasa bekerja dalam tim Agile/Scrum
+              serta fokus pada clean code, keamanan, dan skalabilitas aplikasi.
+            </p>
+            <a href="https://wa.me/081234567890" class="btn-primary">Contact</a>
+          </div>
+          <div class="image">
+            <img
+              src="yudi.png"
+            />
+          </div>
         </div>
       </section>
 
@@ -79,7 +80,7 @@
         </div>
       </section>
 
-      <section class="section-3 container">
+      <section class="section-3">
         <div class="services-detail">
           <h2>Services</h2>
           <p>Berikut adalah layanan yang bisa saya berikan:</p>
@@ -104,7 +105,7 @@
         </div>
       </section>
 
-      <section class="section-4 container">
+      <section class="section-4">
         <div class="projects-detail">
           <h2>My Projects</h2>
           <p>Beberapa projek yang saya kerjakan:</p>
@@ -122,7 +123,7 @@
         </div>
       </section>
 
-      <section class="section-5 container">
+      <section class="section-5">
         <div class="testi-details">
           <h2>Testimonial</h2>
           <p>Beberapa testimoni dari client yang pernah bekerja sama dengan saya.</p>
@@ -130,7 +131,7 @@
         <div class="testi-container">
           <div class="testimonial-card">
             <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="orang1" />
-            <p>"Alfa sangat profesional, hasil kerjanya melebihi ekspektasi saya."</p>
+            <p>"Yudi sangat profesional, hasil kerjanya melebihi ekspektasi saya."</p>
             <h4>Andi</h4>
           </div>
           <div class="testimonial-card">
@@ -146,12 +147,5 @@
         </div>
       </section>
     </main>
-
-    <footer>
-      <p>&copy; 2025 Alfa Edisound. All Rights Reserved.</p>
-      <div class="social-links">
-        <a href="#">LinkedIn</a> | <a href="#">GitHub</a> | <a href="#">Twitter</a>
-      </div>
-    </footer>
   </body>
 </html>
