handling responsive for mobile view, add hamburger side bar responding to mobile view

--- a/CV.html
+++ b/CV.html
@@ -23,7 +23,7 @@
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="profile-pic">
-        <img src="yudi.png" alt="Profile Picture">
+        <img src="public/yudi.png" alt="Profile Picture">
       </div>
       <h2>Yudi Nandanjaya</h2>
       <p class="role">Mahasiswa TI ITS</p>
