add image source for portofolio project, edit hover highlight and make it clear

--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
           <p>Beberapa projek yang saya kerjakan:</p>
           <div class="project-images">
             <a href="#">
-              <img src="https://i.pinimg.com/736x/f7/60/72/f76072d1d73b5c5ca9a64079fafd1c8b.jpg" alt="project1">
+              <img src="public\image.png" alt="project1">
             </a>
             <a href="#">
-              <img src="https://i.pinimg.com/736x/9a/d6/e2/9ad6e28d1d4b096a5b87300cbadf3b9f.jpg" alt="project2">
+              <img src="public\eterion_web.png" alt="project2">
             </a>
             <a href="#">
-              <img src="https://i.pinimg.com/736x/c9/1a/04/c91a0473720c50a113ef605604d03842.jpg" alt="project3">
+              <img src="public\spotify-cli.png  " alt="project3">
             </a>
           </div>
         </div>
@@ -142,19 +142,19 @@
         </div>
         <div class="testi-container">
           <div class="testimonial-card">
-            <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="orang1" />
+            <img src="https://i.pinimg.com/1200x/cf/de/dc/cfdedc2208396c584eb11f51327f92c3.jpg" alt="orang1" />
             <p>"Yudi sangat profesional, hasil kerjanya melebihi ekspektasi saya."</p>
-            <h4>Andi</h4>
+            <h4>Amba</h4>
           </div>
           <div class="testimonial-card">
-            <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="orang2" />
+            <img src="https://i.pinimg.com/736x/c5/d8/f7/c5d8f70955f38593845e5f2ab517bb16.jpg" alt="orang2" />
             <p>"Komunikasi mudah dan pengerjaan cepat, saya puas bekerja dengannya."</p>
-            <h4>Sinta</h4>
+            <h4>Rusdi</h4>
           </div>
           <div class="testimonial-card">
-            <img src="https://randomuser.me/api/portraits/men/12.jpg" alt="orang3" />
+            <img src="https://i.pinimg.com/736x/1c/fc/31/1cfc314b3ec749aca15a325d1e22c9c6.jpg" alt="orang3" />
             <p>"Sangat paham teknologi terbaru dan implementasinya bagus."</p>
-            <h4>Budi</h4>
+            <h4>Azril</h4>
           </div>
         </div>
       </section>
