--- a/index.html
+++ b/index.html
@@ -65,10 +65,29 @@
           <div class="about-detail">
             <h2>About Me</h2>
             <p>
-              Saya seorang Fullstack Developer yang bersemangat dan senang mewujudkan ide menjadi aplikasi nyata.
-              Dengan fondasi yang kuat dalam teknologi front-end dan back-end, saya senang memecahkan masalah
-              melalui kode yang bersih dan efisien. Saya sangat mudah beradaptasi, bersemangat mempelajari alat baru,
-              dan berkembang pesat dalam lingkungan kolaboratif.
+              <style>
+              p {
+                margin-bottom: 16px; /* kasih jarak bawah tiap paragraf */
+                line-height: 1.6;    /* biar lebih enak dibaca */
+              }
+            </style>
+
+            <p>
+              Saya seorang Fullstack Developer yang bersemangat dan senang mewujudkan ide menjadi aplikasi nyata. 
+              Dengan fondasi yang kuat dalam teknologi front-end maupun back-end, saya menikmati tantangan 
+              dalam memecahkan masalah melalui kode yang bersih, efisien, dan mudah dipelihara.
+            </p>
+
+            <p>
+              Saya sangat mudah beradaptasi, antusias mempelajari framework, bahasa pemrograman, maupun tools baru, 
+              serta berkembang pesat dalam lingkungan kolaboratif. Selain itu, saya memiliki perhatian besar pada 
+              user experience (UX) dan scalability, sehingga setiap aplikasi yang saya bangun tidak hanya berfungsi 
+              dengan baik, tetapi juga dapat tumbuh mengikuti kebutuhan pengguna.
+            </p>
+
+            <p>
+              Bagi saya, menjadi seorang developer bukan hanya soal menulis kode, tetapi juga tentang berpikir kreatif, 
+              berkomunikasi dengan tim, dan menciptakan solusi nyata yang memberi dampak positif.
             </p>
           </div>
           <div class="diagram">
@@ -87,6 +106,12 @@
             <div class="skill">
               <label>Graphic Design</label>
               <progress value="50" max="100"></progress>
+            <div class="skill">
+              <label>Math</label>
+              <progress value="1" max="100"></progress>
+            <div class="skill">
+              <label>Long Distance Relationship</label>
+              <progress value="100" max="100"></progress>
             </div>
           </div>
         </div>
