dont mind this commit, just input data and make it a little prettier

--- a/index.html
+++ b/index.html
@@ -92,25 +92,45 @@
           </div>
           <div class="diagram">
             <div class="skill">
-              <label>UI/UX</label>
+              <div class="skill-header">
+                <label>Leadership</label>
+                <span class="skill-level proficient">Advanced</span>
+              </div>
               <progress value="80" max="100"></progress>
             </div>
             <div class="skill">
-              <label>Web Development</label>
+              <div class="skill-header">
+                <label>Working Spirit</label>
+                <span class="skill-level expert">Hard Worker</span>
+              </div>
               <progress value="90" max="100"></progress>
             </div>
             <div class="skill">
-              <label>Cyber Security</label>
+              <div class="skill-header">
+                <label>Creativity</label>
+                <span class="skill-level intermediate">Out of The Box</span>
+              </div>
               <progress value="65" max="100"></progress>
             </div>
             <div class="skill">
-              <label>Graphic Design</label>
-              <progress value="50" max="100"></progress>
+              <div class="skill-header">
+                <label>Mood</label>
+                <span class="skill-level developing">Good</span>
+              </div>
+              <progress value="60" max="100"></progress>
+            </div>
             <div class="skill">
-              <label>Math</label>
-              <progress value="1" max="100"></progress>
+              <div class="skill-header">
+                <label>Academics</label>
+                <span class="skill-level advanced">Cumlaude</span>
+              </div>
+              <progress value="75" max="100"></progress>
+            </div>
             <div class="skill">
-              <label>Long Distance Relationship</label>
+              <div class="skill-header">
+                <label>Long Distance Relationship</label>
+                <span class="skill-level perfect">Perfect</span>
+              </div>
               <progress value="100" max="100"></progress>
             </div>
           </div>
